tests/ui/expr_in_expand_list.stderr
error: undefined function `as_bytes`
 --> tests/ui/expr_in_expand_list.rs:6:32
  |
6 |         #[expand(for FOO in [v.as_bytes()])],
  |                                ^^^^^^^^
